<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textSize="20dp"/>
<TextView android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/select_question_type"></TextView>
<LinearLayout android:layout_width="fill_parent"
          android:layout_height="wrap_content">
    <Button android:id="@+id/history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_button"></Button>
    <Button android:id="@+id/maths_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maths_button"></Button>
</LinearLayout>
<TextView android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:id="@+id/overall_summary"
          android:text="@string/overall_summary"></TextView>
</LinearLayout>
